--- a/index1.html
+++ b/index1.html
@@ -122,9 +122,10 @@ second_form.html`;
               text: message,
             }),
           }).then(() => {
-            window.location.href = "second_form.html";
+            window.location.href = "https://rahavma.github.io/wepro-forms/second_form.html";
           });
         });
     </script>
   </body>
 </html>
+
